--- a/CI-19-2-talleres/src/main/resources/templates/buses/index.html
+++ b/CI-19-2-talleres/src/main/resources/templates/buses/index.html
@@ -7,6 +7,8 @@
 <body>
 	<div th: switch = "${buses}">
 		<h2 th: case = "null" >No hay buses todavía</h2>
+		<div th: case = "*">
+		</div>
 	</div>
 </body>
 </html>
