--- a/CI-19-2-talleres/src/main/resources/templates/buses/index.html
+++ b/CI-19-2-talleres/src/main/resources/templates/buses/index.html
@@ -1,13 +1,50 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="ISO-8859-1">
 <title>Buses</title>
+<meta charset="utf-8">
+<meta http-equiv="x-ua-compatible" content="ie=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet"
+	href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+	integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+	crossorigin="anonymous">
+<link rel="stylesheet"
+	href="https://use.fontawesome.com/releases/v5.4.1/css/all.css"
+	integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz"
+	crossorigin="anonymous">
+<link rel="stylesheet" href="../css/shards.min.css">
 </head>
 <body>
-	<div th: switch = "${buses}">
-		<h2 th: case = "null" >No hay buses todavía</h2>
-		<div th: case = "*">
+	<div th:switch="${buses}">
+		<h2 th:case="null">No hay buses todavÃ­a</h2>
+		<div th:case="*">
+			<table class="table table-striped table-responsive-md">
+				<thead>
+					<tr>
+						<th>Id</th>
+						<th>Placa</th>
+						<th>Tipo</th>
+						<th>Modelo</th>
+						<th>Marca</th>
+						<th>Capacidad</th>
+
+					</tr>
+				</thead>
+				<tbody>
+					<tr th:each="tmio1Bus:${buses}">
+						<td class="text-info" th:text="${tmio1Bus.id}"></td>
+						<td class="text-info" th:text="${tmio1Bus.placa}"></td>
+						<td class="text-info" th:text="${tmio1Bus.tipo}"></td>
+						<td class="text-info" th:text="${tmio1Bus.modelo}"></td>
+						<td class="text-info" th:text="${tmio1Bus.marca}"></td>
+						<td class="text-info" th:text="${tmio1Bus.capacidad}"></td>
+						
+					</tr>
+				</tbody>
+			</table>
+			<a th:href="@{/buses/add/}" class="btn btn-primary"><i
+				class="fas fa-cross"></i></a>
 		</div>
 	</div>
 </body>
