--- a/CI-19-2-talleres/src/main/resources/templates/conductores/index.html
+++ b/CI-19-2-talleres/src/main/resources/templates/conductores/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Buses</title>
+<title>Conductores</title>
 <meta charset="utf-8">
 <meta http-equiv="x-ua-compatible" content="ie=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -16,42 +16,45 @@
 <link rel="stylesheet" href="../css/shards.min.css">
 </head>
 <body>
-	<div th:switch="${buses}">
+	<div th:switch="${conductores}">
+		
 		<div th:case="null">
-			<h2>No hay buses</h2>
-			</a> <a href="/buses/"><i
+			<h2>No hay conductores</h2>
+			</a> <a href="/conductores/"><i
 				class="fas fa-home ml-2"></i> Go back </a>
 		</div>
 		<div th:case="*">
-			<form action="#" th:action="@{/buses/buscar/}" method="get">
-				<input type="text" placeholder="placa del bus" name="placa">
+			<form action="#" th:action="@{/conductores/buscar/}" method="get">
+				<input type="text" placeholder="cedula del conductor" name="cedula">
 			</form>
 			<table class="table table-striped table-responsive-md">
 				<thead>
 					<tr>
-						<th>Id</th>
-						<th>Placa</th>
-						<th>Tipo</th>
-						<th>Modelo</th>
-						<th>Marca</th>
-						<th>Capacidad</th>
+						<th>Cedula</th>
+						<th>Apellidos</th>
+						<th>Fecha contratacion</th>
+						<th>Fecha nacimiento</th>
+						<th>Nombre</th>
+
 
 					</tr>
 				</thead>
 				<tbody>
-					<tr th:each="tmio1Bus:${buses}">
-						<td class="text-info" th:text="${tmio1Bus.id}"></td>
-						<td class="text-info" th:text="${tmio1Bus.placa}"></td>
-						<td class="text-info" th:text="${tmio1Bus.tipo}"></td>
-						<td class="text-info" th:text="${tmio1Bus.modelo}"></td>
-						<td class="text-info" th:text="${tmio1Bus.marca}"></td>
-						<td class="text-info" th:text="${tmio1Bus.capacidad}"></td>
+					<tr th:each="tmio1Conductore:${conductores}">
+						<td class="text-info" th:text="${tmio1Conductore.cedula}"></td>
+						<td class="text-info" th:text="${tmio1Conductore.apellidos}"></td>
+						<td class="text-info"
+							th:text="${tmio1Conductore.fechaContratacion.toString()}"></td>
+						<td class="text-info"
+							th:text="${tmio1Conductore.fechaNacimiento.toString()}"></td>
+						<td class="text-info" th:text="${tmio1Conductore.nombre}"></td>
+
 
 					</tr>
 				</tbody>
 			</table>
-			<a th:href="@{/buses/add/}" class="btn btn-primary"><i
-				class="fas fa-cross"></i> </a> <a href="/"><i
+			<a th:href="@{/conductores/add/}" class="btn btn-primary"><i
+				class="fas fa-cross"></i></a> <a href="/"><i
 				class="fas fa-home ml-2"></i> Go back to main</a>
 		</div>
 	</div>
