--- a/CI-19-2-talleres/src/main/resources/templates/rutas/add.html
+++ b/CI-19-2-talleres/src/main/resources/templates/rutas/add.html
@@ -16,6 +16,7 @@
 <link rel="stylesheet" href="../css/shards.min.css">
 </head>
 <body>
+	<a href="/logout"><i class="fas fa-door-open"></i> exit</a>
 	<div class="container my-5">
 		<h2 class="mb-5" >New Ruta</h2>
 		<div class="row">
