--- a/CI-19-2-talleres/src/main/resources/templates/servicios/index.html
+++ b/CI-19-2-talleres/src/main/resources/templates/servicios/index.html
@@ -16,6 +16,7 @@
 <link rel="stylesheet" href="../css/shards.min.css">
 </head>
 <body>
+	<a href="/logout"><i class="fas fa-door-open"></i> exit</a>
 	<div th:switch="${servicios}">
 		<div th:case="null">
 			<h2>No hay servicios</h2>
