--- a/CI-19-2-talleres/src/main/resources/templates/buses/add.html
+++ b/CI-19-2-talleres/src/main/resources/templates/buses/add.html
@@ -16,16 +16,16 @@
 <link rel="stylesheet" href="../css/shards.min.css">
 </head>
 <body>
+	<a href="/logout"><i class="fas fa-door-open"></i> exit</a>
 	<div class="container my-5">
-		<h2 class="mb-5" >New Bus</h2>
+		<h2 class="mb-5">New Bus</h2>
 		<div class="row">
 			<div class="col-md-6">
 				<form action="#" th:action="@{/buses/add/}" th:object="${tmio1Bus}"
 					method="post">
 					<div class="row">
-						 <input
-								type="hidden" th:field="*{id}" class="form-control" id="id"
-								placeholder="id">
+						<input type="hidden" th:field="*{id}" class="form-control" id="id"
+							placeholder="id">
 						<div class="form-group col-md-6">
 							<label for="placa" class="col-form-label">Placa</label> <input
 								type="text" th:field="*{placa}" class="form-control" id="placa"
@@ -39,14 +39,14 @@
 								placeholder="Tipo"> <span
 								th:if="${#fields.hasErrors('tipo')}" th:errors="*{tipo}"
 								class="text-danger"></span>
-						</div>	
+						</div>
 						<div class="form-group col-md-6">
 							<label for="modelo" class="col-form-label">Modelo</label> <input
-								type="text" th:field="*{modelo}" class="form-control" id="modelo"
-								placeholder="Modelo"> <span
+								type="text" th:field="*{modelo}" class="form-control"
+								id="modelo" placeholder="Modelo"> <span
 								th:if="${#fields.hasErrors('modelo')}" th:errors="*{modelo}"
 								class="text-danger"></span>
-						</div>	
+						</div>
 						<div class="form-group col-md-6">
 							<label for="marca" class="col-form-label">Marca</label> <input
 								type="text" th:field="*{marca}" class="form-control" id="marca"
@@ -56,21 +56,23 @@
 						</div>
 						<div class="form-group col-md-6">
 							<label for="capacidad" class="col-form-label">Capacidad</label> <input
-								type="text" th:field="*{capacidad}" class="form-control" id="capacidad"
-								placeholder="Capacidad"> <span
-								th:if="${#fields.hasErrors('capacidad')}" th:errors="*{capacidad}"
-								class="text-danger"></span>
-						</div>			
+								type="text" th:field="*{capacidad}" class="form-control"
+								id="capacidad" placeholder="Capacidad"> <span
+								th:if="${#fields.hasErrors('capacidad')}"
+								th:errors="*{capacidad}" class="text-danger"></span>
+						</div>
 					</div>
 					<div class="row">
 						<div class="col-md-4 mt-3">
-							<input type="submit" name="action" class="btn btn-primary" value="Add bus">
+							<input type="submit" name="action" class="btn btn-primary"
+								value="Add bus">
 						</div>
 						<div class="col-md-3 mt-3">
 							<input type="reset" class="btn btn-secondary" value="Clear">
 						</div>
 						<div class="col-md-3 mt-3">
-							<input type="submit" name="action" class="btn btn-secondary" value="Cancel">
+							<input type="submit" name="action" class="btn btn-secondary"
+								value="Cancel">
 						</div>
 					</div>
 				</form>
