--- a/CI-19-2-talleres/src/main/resources/templates/buses/index.html
+++ b/CI-19-2-talleres/src/main/resources/templates/buses/index.html
@@ -16,6 +16,7 @@
 <link rel="stylesheet" href="../css/shards.min.css">
 </head>
 <body>
+	<a href="/logout"><i class="fas fa-door-open"></i> exit</a>
 	<div th:switch="${buses}">
 		<div th:case="null">
 			<h2>No hay buses</h2>
@@ -50,7 +51,7 @@
 					</tr>
 				</tbody>
 			</table>
-			<a th:href="@{/buses/add/}" class="btn btn-primary"><i
+			<a th:href="@{/buses/add/}" sec:authorize="hasRole('admin')"class="btn btn-primary"><i
 				class="fas fa-cross"></i> </a> <a href="/"><i
 				class="fas fa-home ml-2"></i> Go back to main</a>
 		</div>
