sitios terminado, falla el buscar, toca arreglarlo

--- a/CI-19-2-talleres/src/main/resources/templates/index.html
+++ b/CI-19-2-talleres/src/main/resources/templates/index.html
@@ -48,7 +48,10 @@
 						to servicios</a>
 				</p>
 				<!-- </div>-->
-
+				<p>
+					<a href="/sitios/"><i class="fas fa-user-edit ml-2"></i> Go
+						to sitios</a>
+				</p>
 
 
 			</div>
