Avance masivo en crear/eliminar sitios-rutas. Aun hay errores al crear y al editar.

--- a/CI-19-2-talleres/src/main/resources/templates/index.html
+++ b/CI-19-2-talleres/src/main/resources/templates/index.html
@@ -52,6 +52,11 @@
 					<a href="/sitios/"><i class="fas fa-user-edit ml-2"></i> Go
 						to sitios</a>
 				</p>
+				
+				<p>
+					<a href="/sitios-rutas/"><i class="fas fa-user-edit ml-2"></i> Go
+						to sitios-rutas</a>
+				</p>
 
 
 			</div>
