--- a/CI-19-2-talleres/src/main/resources/templates/sitios-rutas/add.html
+++ b/CI-19-2-talleres/src/main/resources/templates/sitios-rutas/add.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta http-equiv="x-ua-compatible" content="ie=edge">
-<title>Add User</title>
+<title>Add Sitio-Ruta</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet"
 	href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
@@ -18,28 +18,37 @@
 <body>
 	<a href="/logout"><i class="fas fa-door-open"></i> exit</a>
 	<div class="container my-5">
-		<h2 class="mb-5">New Sitio</h2>
+		<h2 class="mb-5">New Sitio-Ruta</h2>
 		<div class="row">
 			<div class="col-md-6">
-				<form action="#" th:action="@{/sitios/add/}" th:object="${tmio1Sitio}"
-					method="post">
+				<form action="#" th:action="@{/sitios-rutas/add/}"
+					th:object="${tmio1SitiosRutaWrapper}" method="post">
 					<div class="row">
-						<input type="hidden" th:field="*{id}" class="form-control" id="id"
-							placeholder="id">
 						<div class="form-group col-md-6">
-							<label for="descripcion" class="col-form-label">Descripción</label> <input
-								type="text" th:field="*{descripcion}" class="form-control" id="descripcion"
-								placeholder="Descripción"> <span
-								th:if="${#fields.hasErrors('descripcion')}" th:errors="*{descripcion}"
-								class="text-danger"></span>
+						<label for="idRuta" class="col-form-label">Ruta (Id)</label> <br><select
+								th:field="*{idRuta}">
+								<option th:each="ruta : ${rutas}" th:value="${ruta.id}"
+									class="form-control" th:text="${ruta.id}"
+									th:selected="${tmio1SitiosRutaWrapper.idRuta=ruta}"></option>
+							</select> <span th:if="${#fields.hasErrors('idRuta')}"
+								th:errors="*{idRuta}" class="text-danger"></span>
 						</div>
+						
+						
 						<div class="form-group col-md-6">
-							<label for="nombre" class="col-form-label">Nombre</label> <input
-								type="text" th:field="*{nombre}" class="form-control"
-								id="nombre" placeholder="Nombre"> <span
-								th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}"
-								class="text-danger"></span>
+							<label for="idSitio" class="col-form-label">Sitio (Id)</label><br> <select
+								th:field="*{idSitio}">
+								<option th:each="sitio : ${sitios}" th:value="${sitio.id}"
+									class="form-control" th:text="${sitio.id}"
+									th:selected="${tmio1SitiosRutaWrapper.idSitio=sitio.id}"></option>
+							</select> <span th:if="${#fields.hasErrors('idSitio')}"
+								th:errors="*{idSitio}" class="text-danger"></span>
 						</div>
+
+
+
+
+
 					</div>
 					<div class="row">
 						<div class="col-md-4 mt-3">
